compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__assoc_types_dont_belong.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
//  main.flx

trait Foo  {
    type A;
    type B;
    type C;
    
}

apply Foo to s32 {
    type A = s32;
    type B = s32;
    type C = s32;
    type D = s32;
    
}


Diagnostics

[E0030] Error: associated type do not belong in apply
    ,-[ main.flx:12:16]
    |
 12 |     type C = s32;
    |                |  
    |                `-- associated type `D` do not belong in apply for trait `Foo`
----'

