compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_assoc_types_dont_belong.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0



Diagnostics

[E0030] Error: associated type do not belong in apply
    ,-[ main.flx:12:16]
    |
 12 |     type C = s32;
    |                |  
    |                `-- associated type `D` do not belong in apply for trait `Foo`
----'

