compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_duplicate_generics_when_combining_apply_and_method_generics.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn foo<A>() -> () {

}

fn bar<B>() -> () {

}

fn foo_bar<A, B>() -> () {

}

fn foo_bar<C>() -> () {

}



Diagnostics

[E0024] Error: duplicate generics
   ,-[ main.flx:5:7]
   |
 4 | apply<A, B> to Foo {
   |   ^^^|^^  
   |      `---- previously defined here
 5 |     fn foo<A>() {}
   |       ^|^  
   |        `--- duplicate generics `A`
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:5:7]
   |
 5 |     fn foo<A>() {}
   |       ^|^  
   |        `--- unused generic parameters `A`
---'
[E0024] Error: duplicate generics
   ,-[ main.flx:6:6]
   |
 4 | apply<A, B> to Foo {
   |   ^^^|^^  
   |      `---- previously defined here
   | 
 6 |     fn bar<B>() {}
   |      ^|^  
   |       `--- duplicate generics `B`
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:6:6]
   |
 6 |     fn bar<B>() {}
   |      ^|^  
   |       `--- unused generic parameters `B`
---'
[E0024] Error: duplicate generics
   ,-[ main.flx:7:9]
   |
 4 | apply<A, B> to Foo {
   |   ^^^|^^  
   |      `---- previously defined here
   | 
 7 |     fn foo_bar<A, B>() {}
   |         ^^^|^^  
   |            `---- duplicate generics `A`, `B`
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:7:9]
   |
 7 |     fn foo_bar<A, B>() {}
   |         ^^^|^^  
   |            `---- unused generic parameters `A`, `B`
---'
[E0021] Error: unused generic parameters
   ,-[ main.flx:8:8]
   |
 8 |     fn foo_bar<C>() {}
   |        ^|^  
   |         `--- unused generic parameters `C`
---'

