compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_methods_do_not_belong_in_apply.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn test() -> () {

}



Diagnostics

[E0016] Error: unimplemented trait methods in apply
    ,-[ main.flx:11:8]
    |
  3 | ,---> trait Foo {
    : :     
  6 | |--->     fn bazz();
    | |                      
    | `---------------------- trait methods `bar`, `bazz`, `foo` declared here
    | 
 11 |   ,-> apply Foo to Bar {
 12 |   |->     fn test() {}
    |   |                      
    |   `---------------------- unimeplemented trait methods `bar`, `bazz`, `foo` in apply
----'
[E0017] Error: methods do not belong in apply
    ,-[ main.flx:11:8]
    |
  3 | ,---> trait Foo {
    : :     
  6 | |--->     fn bazz();
    | |                      
    | `---------------------- trait methods `bar`, `bazz`, `foo` declared here
    | 
 11 |   ,-> apply Foo to Bar {
 12 |   |->     fn test() {}
    |   |                      
    |   `---------------------- method `test` does not belong in apply
----'

