compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_missing_generic_params_in_trait_restriction.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.rs
Module Id: 0



Diagnostics

[E0022] Error: incorrect number of generic arguments in where predicate
    ,-[ main.rs:10:7]
    |
  4 | trait Bar<T> {}
    *       ^|^  
    *        `--- expected 1 arguments
    * 
 10 |     where T is Bar
    *       ^|^  
    *        `--- got 0 arguments
----'

