compiler/flux_hir/src/tests/snapshots/flux_hir__tests__generics__errors_restriction_not_met_struct_initialization.snap
---
source: compiler/flux_hir/src/tests/generics.rs
expression: s
---
Module Id Map



Item Tree

File Id:  main.flx
Module Id: 0

fn main() -> () {
let foo <unknown type> = struct Foo {
x: 0
};
}



Diagnostics

[E0044] Error: trait restrictions not met
    ,-[ main.flx:12:20]
    |
  6 |     where T is Bar
    |           ^|^  
    |            `--- restriction `Bar` defined here
    | 
 12 |     let foo = Foo {
    |                    |  
    |                    `-- trait restriction `Bar` not met for type `int`
----'

